additional route: local scan
